<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dBlue"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/initsetup"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/dYellow" />

    <TextView
        android:id="@+id/info1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defloc"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/dYellow" />

    <EditText
        android:id="@+id/avdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/dYellow"/>

    <Button
        android:id="@+id/apsave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goBtn"
        android:onClick="mapLaunch"/>

    <ImageView
        android:contentDescription="@string/logo"
        android:id="@+id/logo2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="bottom|center"
        android:src="@drawable/logo_main" />

</LinearLayout>