<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/optionsBar"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_below="@+id/map"
    android:background="@color/dBlue"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical"
        tools:ignore="UselessParent" >

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:alpha="0.8"
            android:background="@color/dBlue"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="10" >

            <ImageButton
                android:id="@+id/plusBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="0dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_weight="1"
                android:alpha="0.2"
                android:background="@color/dBlue"
                android:contentDescription="@string/add"
                android:onClick="addPlace"
                android:scaleType="fitEnd"
                android:src="@drawable/plus_icon" />

            <TextView
                android:id="@+id/maddPlace"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:alpha="0.2"
                android:gravity="center|top"
                android:paddingBottom="10dip"
                android:text="@string/maddnew"
                android:textColor="@color/dYellow" />

            <ImageButton
                android:id="@+id/starBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginBottom="0dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_weight="1"
                android:background="@color/dBlue"
                android:contentDescription="@string/fave"
                android:onClick="openPlaces"
                android:scaleType="fitEnd"
                android:src="@drawable/star_icon" />

            <TextView
                android:id="@+id/mviewPlaces"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|top"
                android:paddingBottom="10dip"
                android:text="@string/msdestinations"
                android:textColor="@color/dYellow" />

            <ImageButton
                android:id="@+id/clockBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginBottom="0dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_weight="1"
                android:background="@color/dBlue"
                android:contentDescription="@string/history"
                android:onClick="openVisits"
                android:scaleType="fitEnd"
                android:src="@drawable/clock_icon" />

            <TextView
                android:id="@+id/mviewVisits"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|top"
                android:paddingBottom="10dip"
                android:text="@string/mvhistory"
                android:textColor="@color/dYellow" />

            <ImageButton
                android:id="@+id/homeBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginBottom="0dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_weight="1"
                android:background="@color/dBlue"
                android:contentDescription="@string/currentLoc"
                android:onClick="goHome"
                android:scaleType="fitEnd"
                android:src="@drawable/home_icon" />

            <TextView
                android:id="@+id/goHome"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center|top"
                android:paddingBottom="10dip"
                android:text="@string/mgoHome"
                android:textColor="@color/dYellow" />

            <ImageButton
                android:id="@+id/saveBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginBottom="0dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_weight="1"
                android:background="@color/dBlue"
                android:contentDescription="@string/save"
                android:onClick="saveVisit"
                android:scaleType="fitEnd"
                android:src="@drawable/save_icon" />

            <TextView
                android:id="@+id/msaveCLoc"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center|top"
                android:paddingBottom="10dip"
                android:text="@string/msaveCurrent"
                android:textColor="@color/dYellow" />
        </LinearLayout>
            
</RelativeLayout>

</LinearLayout>