<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dBlue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddPlace" >

    <Switch
        android:id="@+id/apdef"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/defloc"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textOff="NO"
        android:textOn="YES" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/apdef"
        android:text="@string/place_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/apdesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/info1"
        android:ems="10"
        android:inputType="text" />



    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/apdesc"
        android:text="@string/longitude"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/aplong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:ems="10"
        android:inputType="numberDecimal"
        android:singleLine="true" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/aplong"
        android:text="@string/latitude"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/aplat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView4"
        android:ems="10"
        android:inputType="numberDecimal"
        android:singleLine="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/aplat"
        android:text="@string/icon_color"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <SeekBar
        android:id="@+id/apcol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:max="359" />

    <ImageView
        android:id="@+id/colbar"
        android:contentDescription="@string/icon_color"
        android:layout_width="match_parent"
        android:layout_height="20dip"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/apcol"
        android:background="#ff0000"
        android:src="@drawable/trans" />

    <Button
        android:id="@+id/apsave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/colbar"
        android:onClick="addPlace"
        android:text="@string/add" />

    <EditText
        android:id="@+id/apname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:inputType="text">
        <requestFocus />
    </EditText>
    <TextView
        android:id="@+id/info1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/apname"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceLarge" />

	</RelativeLayout>
