<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dBlue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddVisit" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/avdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/info1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/latlngnav"
        android:text="@string/comment"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/avmemo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/info1"
        android:ems="10"
        android:inputType="text"
        android:lines="2" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/avsave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/avcolbar"
        android:onClick="addVisit"
        android:text="@string/add" />

    <SeekBar
        android:id="@+id/avcol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:max="359" />

    <ImageView
        android:id="@+id/avcolbar"
        android:layout_width="match_parent"
        android:layout_height="20dip"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/avcol"
        android:layout_centerVertical="true"
        android:background="#ff0000"
        android:contentDescription="@string/icon_color"
        android:src="@drawable/trans" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/avmemo"
        android:text="@string/icon_color"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/avdate"
        android:text="@string/gosa"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/avgosa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView5"
        android:ems="10"
		android:inputType="text"
		android:baselineAligned="false"/>

    <LinearLayout
        android:id="@+id/latlngnav"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/avgosa"
        android:weightSum="2"
		android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/avlat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/avlong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>